--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@posthog/react": "^1.7.1",
     "gsap": "^3.14.2",
     "motion": "^12.34.0",
     "next": "16.1.6",
+    "posthog-js": "^1.347.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
